# quant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  start-dev.sh
.cursor/rules/: backtest.mdc  coding-standards.mdc  data-processing.mdc  general.mdc  strategy.mdc
app/: main.py
app/core/: logger.py
app/database/: config.py
app/entities/: base.py
app/managers/: __init__.py
app/services/: base.py
app/tools/: __init__.py  common.py
backend/: env.dev  pyproject.toml  start-dev.sh
backend/app/: container.py
backend/app/api/routes/: __init__.py  health.py
backend/app/backtest/: __init__.py  engine.py
backend/app/core/: config.py  constants.py
backend/app/database/: migration.py
backend/app/managers/: base.py
backend/app/schemas/: __init__.py  base.py
backend/app/strategies/: __init__.py  vectorbt_strategies.py
backend/data/a-share/start-20250908/indices/: sh000001.csv  sh000016.csv  sh000300.csv  sh000905.csv  sz399001.csv  sz399006.csv
backend/data/a-share/start-20250908/stocks/: 000001.csv  000002.csv  000004.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000014.csv  000016.csv  000017.csv  000019.csv  000020.csv  000021.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000034.csv  000035.csv  000036.csv  000037.csv  000039.csv  000040.csv  000042.csv  000045.csv  000048.csv  000049.csv  000050.csv  000055.csv  000056.csv  000058.csv  000059.csv  000060.csv  (+5419 more)
backend/data/us-stocks/start-20250909/: classification_summary.txt  header_standardization_log.txt  rename_log.txt
backend/data/us-stocks/start-20250909/ADR_ADS/: AKO.csv  AKO_1.csv  ARMH.csv  ASMH.csv  AZN.csv  AZNH.csv  BHP.csv  BPH.csv  CUK.csv  DEO.csv  GSKH.csv  HCM.csv  HSBH.csv  IONR.csv  LYG.csv  RYAAY.csv  SAPH.csv  SHEH.csv  STHH.csv  TM.csv  TMH.csv  WPP.csv
backend/data/us-stocks/start-20250909/Bond_Note/: ABXB.csv  AGGH.csv  AIZN.csv  ARBKL.csv  ASBA.csv  ATCOL.csv  ATHS.csv  ATLCL.csv  ATLCZ.csv  BAB.csv  BAMB.csv  BC.csv  BC_1.csv  BIPI.csv  BNDC.csv  BNDS.csv  BNH.csv  BNJ.csv  BOXA.csv  BYLD.csv  CGABL.csv  CGHY.csv  CICB.csv  CIMN.csv  CIMO.csv  CMF.csv  CMSA.csv  CMSC.csv  CMSD.csv  CNFRZ.csv  CRBD.csv  CSWCZ.csv  CTBB.csv  CTDD.csv  CUBB.csv  DHY.csv  DMB.csv  EAGG.csv  EAI.csv  ECCU.csv  (+167 more)
backend/data/us-stocks/start-20250909/Common_Stock/: A.csv  AA.csv  AAA.csv  AAAA.csv  AACB.csv  AACI.csv  AACT.csv  AAL.csv  AALG.csv  AAM.csv  AAME.csv  AAMI.csv  AAM_1.csv  AAOI.csv  AAON.csv  AAP.csv  AAPG.csv  AAPL.csv  AAPR.csv  AARD.csv  AAUC.csv  AAVM.csv  AB.csv  ABAT.csv  ABBV.csv  ABCB.csv  ABCL.csv  ABCS.csv  ABEO.csv  ABG.csv  ABI.csv  ABL.csv  ABLD.csv  ABLG.csv  ABLLL.csv  ABLS.csv  ABLV.csv  ABM.csv  ABNB.csv  ABNY.csv  (+8797 more)
backend/data/us-stocks/start-20250909/ETF/: AAAU.csv  AALG.csv  AAPB.csv  AAPD.csv  AAPU.csv  AAPW.csv  AAPX.csv  AAPY.csv  AAUS.csv  AAXJ.csv  ABEQ.csv  ABFL.csv  ABHY.csv  ABIG.csv  ABNY.csv  ACES.csv  ACLO.csv  ACVT.csv  ACWI.csv  ACWX.csv  ADBG.csv  ADIV.csv  ADPV.csv  AEMS.csv  AFK.csv  AGG.csv  AGGS.csv  AGMI.csv  AGNG.csv  AGQ.csv  AGRW.csv  AGZ.csv  AHLT.csv  AIA.csv  AIEQ.csv  AIFD.csv  AINP.csv  AIRL.csv  ALIL.csv  ALRG.csv  (+1761 more)
backend/data/us-stocks/start-20250909/ETN/: AMJB.csv  AMUB.csv  ATMP.csv  DGP.csv  DGZ.csv  DJP.csv  DZZ.csv  ETN.csv  ETNB.csv  FNGS.csv  FNGU.csv  GRN.csv  JETU.csv  SPYU.csv  UCIB.csv  VXX.csv  VXZ.csv
backend/data/us-stocks/start-20250909/Fund_Trust/: AAT.csv  ADAM.csv  ADAMI.csv  ADX.csv  AEFC.csv  AFLG.csv  AFMC.csv  AFSM.csv  AGQI.csv  AHT.csv  AHT_1.csv  AHT_2.csv  AHT_3.csv  AHT_4.csv  AIRR.csv  AKAF.csv  ASG.csv  BAR.csv  BCV.csv  BHK.csv  BHM.csv  BKT.csv  BME.csv  BNGE.csv  BPOPM.csv  BTC.csv  BTCW.csv  BUFF.csv  BWEB.csv  BXMT.csv  BXSL.csv  C.csv  CAAA.csv  CANE.csv  CARZ.csv  CCIA.csv  CCIF.csv  CFND.csv  CHCT.csv  CHN.csv  (+407 more)
backend/data/us-stocks/start-20250909/Preferred/: ABR.csv  ABR_1.csv  ABR_2.csv  ACGLN.csv  ACGLO.csv  ADAML.csv  ADAMM.csv  ADAMN.csv  ADAMZ.csv  ADC.csv  AGNCL.csv  AGNCM.csv  AGNCN.csv  AGNCO.csv  AGNCP.csv  AIRTP.csv  ALB.csv  ALL.csv  ALL_1.csv  ALL_2.csv  ALTG.csv  AMH.csv  AMH_1.csv  ARES.csv  ASB.csv  ASB_1.csv  ATCO.csv  ATCO_1.csv  ATH.csv  ATH_1.csv  ATH_2.csv  ATH_3.csv  ATH_4.csv  ATLCP.csv  BAC.csv  BAC_1.csv  BAC_2.csv  BAC_3.csv  BAC_4.csv  BAC_5.csv  (+320 more)
backend/data/us-stocks/start-20250909/Rights/: AACBR.csv  AACG.csv  AADR.csv  ABEV.csv  ABVX.csv  ADXN.csv  AHG.csv  AIFER.csv  AKTX.csv  ALAR.csv  APADR.csv  ARBK.csv  ARGX.csv  ARM.csv  ASND.csv  ASPCR.csv  ATHE.csv  ATMCR.csv  ATMVR.csv  AUTL.csv  AZUL.csv  BACCR.csv  BAYAR.csv  BBAR.csv  BBRE.csv  BCYC.csv  BDRX.csv  BEAGR.csv  BHKr.csv  BHKrw.csv  BKHAR.csv  BLRX.csv  BLTE.csv  BMA.csv  BNTX.csv  BOWNR.csv  BSAAR.csv  BWAY.csv  CANF.csv  CAPNR.csv  (+147 more)
backend/data/us-stocks/start-20250909/Unit/: AACBU.csv  AACIU.csv  AACT.csv  ACU.csv  AIFEU.csv  ALDFU.csv  ALFUU.csv  ATMCU.csv  ATMVU.csv  BACCU.csv  BAYAU.csv  BOWNU.csv  CAPNU.csv  CCCXU.csv  CCIXU.csv  CCU.csv  CGCTU.csv  CHACU.csv  CHEB.csv  CLBR.csv  CLRCU.csv  COLAU.csv  COPL.csv  CUBWU.csv  DYCQU.csv  DYNXU.csv  EGHAU.csv  EQV.csv  ETHMU.csv  EURKU.csv  EWUS.csv  FACTU.csv  FGMCU.csv  FIGXU.csv  FKU.csv  FLGB.csv  FORLU.csv  FSHPU.csv  GIGGU.csv  GJH.csv  (+57 more)
backend/data/us-stocks/start-20250909/Warrant/: AACIW.csv  AACT.csv  AAM.csv  ABLLW.csv  ABLVW.csv  ABPWW.csv  ABVEW.csv  ACHR.csv  ACONW.csv  ADSEW.csv  ADVWW.csv  AERTW.csv  AEVAW.csv  AFRIW.csv  (+388 more)
backend/scripts/: backtest_a_share_20250908.py
frontend/: .eslintignore  .prettierignore  LINT_CONFIG.md  env.dev  eslint.config.mjs  package-lock.json  package.json  start-dev.sh  tsconfig.json
frontend/src/: global.d.ts
frontend/src/api/: client.ts  config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/a-share/: page.tsx
frontend/src/components/: AppInfo.tsx  Button.tsx  CandlestickChart.tsx  Sidebar.tsx  index.ts
frontend/src/config/: index.ts
frontend/src/services/: stock.ts
frontend/src/types/: index.ts
notebooks/: K线图学习索引.md  K线图知识整理.md  K线图高级形态与特殊概念.md
